# meddpicc-eval

./: .gitignore  README.md  SKILL.md  pyproject.toml  thresholds.yaml
assets/: 00-load-inputs.md  01-grade-extractions.md  02-aggregate-metrics.md  03-apply-thresholds.md  04-migration-verdict.md  05-emit-outputs.md  rubric.md  seed-golden-set.jsonl
schemas/: extraction.schema.json  golden-set.schema.json  thresholds.schema.json  verdict.schema.json
scripts/: aggregate.py  apply_thresholds.py  confirm_grades.py  emit.py  grade.py  llm_judge.py  run_eval.py  validate_inputs.py  verdict.py
tests/: conftest.py  test_aggregate.py  test_apply_thresholds.py  test_confirm_grades.py  test_e2e.py  test_emit.py  test_grade.py  test_validate_inputs.py  test_verdict.py
tests/fixtures/malformed/evidence_quote_not_null_for_null_value/: golden-set.jsonl
tests/fixtures/malformed/extraction_missing_field/: golden-set.jsonl
tests/fixtures/malformed/invalid_confidence_enum/: golden-set.jsonl
tests/fixtures/malformed/invalid_segment/: golden-set.jsonl
tests/fixtures/malformed/missing_required_field/: golden-set.jsonl
tests/fixtures/malformed/non_json_line/: golden-set.jsonl
tests/fixtures/three_five_scenario/: build_fixture.py  golden-set.jsonl  judgments.jsonl
tests/fixtures/three_five_scenario/extractions/candidate_model_v3/: T001.json  T002.json  T004.json  T006.json  T007.json  T008.json  T010.json  T012.json  T013.json  T016.json  T017.json  T018.json  T019.json  T020.json  T022.json  T023.json  T024.json  (+41 more)
tests/fixtures/valid/: golden-set.jsonl  thresholds.yaml
(+56 files in other folders)
