[project]
name = "meddpicc-eval"
version = "1.0.0"
description = "Extractor-agnostic eval harness for MEDDPICC extraction systems"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
